# adasa_rover

./: LICENSE  README.md
adasa_description/: CMakeLists.txt  package.xml
adasa_description/config/: joint_names_ADASA_Robot_URDF.yaml  slam_toolbox.yaml
adasa_description/launch/: display.launch  gazebo.launch.py
adasa_description/maps/: blank_map.yaml
adasa_description/meshes/: base_link.stl  left_wheel_1.stl  omniwheel_1.stl  right_wheel_1.stl  sonar_back_1.stl  sonar_left_1.stl  sonar_right_1.stl  zed2_1.stl
adasa_description/rviz/: adasa.rviz
adasa_description/urdf/: adasa.gazebo  adasa.trans  adasa.xacro  materials.xacro
adasa_description/worlds/: test.world
